--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.4",
-    "@sveltejs/adapter-vercel": "^5.4.3",
-    "@sveltejs/kit": "^2.5.22",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@sveltejs/enhanced-img": "^0.3.7",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "svelte": "5.0.0-next.219",
+    "postcss": "^8.4.47",
+    "svelte": "5.0.0-next.247",
     "svelte-add": "2024.4.9-0.0",
-    "svelte-check": "^3.8.5",
-    "tailwindcss": "^3.4.9",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.0",
+    "svelte-check": "^3.8.6",
+    "tailwindcss": "^3.4.11",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.6",
     "vitest": "^1.6.0"
   },
   "type": "module",
   "dependencies": {
     "clsx": "^2.1.1",
-    "pocketbase": "^0.21.4",
+    "pocketbase": "^0.21.5",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "valibot": "^0.36.0"
