--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.4",
+    "@sveltejs/adapter-cloudflare": "^4.7.2",
     "@sveltejs/enhanced-img": "^0.3.7",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
